theme specific labels for scenarios
